--- a/css_portfolio/menu.html
+++ b/css_portfolio/menu.html
@@ -53,7 +53,7 @@
    
   </div>
 
-  <a href="https://mexicanowl64.github.io/WebDevPortfolio/MainMenu/index.html"><button class="button"  >Click Here</button></a>
+  <a href="https://mexicanowl64.github.io/WebDevPortfolio/MainMenu/index.html"><button class="button"  >Click Here to go to Main Menu</button></a>
 </body>
 
 </html>
